# rustbackendstarter

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 0001_init.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/middleware/: auth.rs
src/routes/: admin.rs  auth.rs  dashboard.rs  health.rs  mod.rs
tests/: api_tests.rs
